--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,13 @@ server {
         proxy_set_header Host $host;
         proxy_redirect off;
         client_max_body_size 100M;
+        add_header 'Access-Control-Allow-Origin' 'http://localhost:5000';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+        add_header 'Access-Control-Max-Age' 1728000;
+        add_header 'Content-Type' 'text/plain; charset=utf-8';
+        add_header 'Content-Length' 0;
+        return 204;
     }
 
     location /static/ {
