--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   web:
     build: .
     command: >
-      sh -c "gunicorn config.wsgi:application --bind 0.0.0.0:8000 --timeout 300"
+      sh -c "daphne config.asgi:application --port 8000 --bind 0.0.0.0"
     volumes:
       - .:/usr/src/app
       - static_volume:/usr/src/app/static/
