--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,25 +1,40 @@
-upstream config {
-    server web:8000;
+upstream web {
+    server web:8000; 
 }
 
 server {
-    listen 80;
-    location / {
-        proxy_pass http://config;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-        client_max_body_size 100M;
-    }
-
+    listen 80; 
+    
     location /static/ {
         alias /usr/src/app/static/;
-        expires 30d;
-        add_header Cache-Control "public, max-age=2592000";
-        access_log off;
+        expires 30d; 
+        add_header Cache-Control "public, max-age=2592000"; 
+        access_log off; 
     }
 
+    
     location /media/ {
-        root /usr/src/app/;
+        alias /usr/src/app/media/; 
+        expires 30d; 
+        add_header Cache-Control "public, max-age=2592000"; 
+        access_log off; 
+    }
+
+
+    location /ws/ {
+        proxy_pass http://web; 
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade; 
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_redirect off;
+    }
+
+
+    location / {
+        proxy_pass http://web; 
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+        proxy_set_header Host $host; 
+        proxy_redirect off;
     }
 }
